--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install xmllint
+    - name: Install libgtk
       run: sudo apt install libgtk-3-dev
     - name: Build
       run: cargo build --verbose
