--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ eframe = "0.22.0"
 egui = "0.22.0"
 env_logger = "0.10.0"
 git2 = "0.17.2"
+ignore = "0.4.20"
+notify = "6.1.1"
 puffin = "0.16.0"
 puffin_egui = "0.22.0"
 rfd = "0.11.4"
