--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ chrono = "0.4.31"
 eframe = "0.23.0"
 egui = "0.23.0"
 env_logger = "0.10.0"
+flate2 = "1.0.28"
 git2 = "0.17.2"
 ignore = "0.4.20"
 notify = "6.1.1"
